Many updates including JUnit 5 support (#182)
* add head request support

* Add support for junit5, refactor to support both junit 4 and 5, update filter logic with exact match, add summary json, bug fixes and adding more unit test coverage, add support for spock, update gradle version, refactor out static fields from abstractTestPlan, update readme to adoc

* Update README.adoc

* respond to comments

* respond to comments

* move junit 5 to be default

* add support for in testclass define doOnPass and doOnFail like in junit 4 but for junit 5

* code Update

* Update README.adoc

* fix unit test

Co-authored-by: criley-eagle <criley@eagleinvsys.com>
Co-authored-by: criley-eagle <37447771+criley-eagle@users.noreply.github.com>